--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "big-integer": "^1.6.26",
     "bignumber.js": "^6.0.0",
     "bitcore-mnemonic": "^1.5.0",
+    "bytebuffer": "^5.0.1",
     "chloride": "^2.2.8",
     "vorpal": "^1.12.0"
   },
