--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "bytebuffer": "^5.0.1",
     "chloride": "^2.2.8",
     "lodash": "^4.17.5",
+    "popsicle": "^9.2.0",
     "vorpal": "^1.12.0"
   },
   "devDependencies": {},
