Creating and starting json-rpc server

--- a/config.default.json
+++ b/config.default.json
@@ -1,5 +1,11 @@
 {
   "network": "testnet",
+  "rpc": {
+    "port": 5080,
+    "host": "127.0.0.1",
+    "path:": "/",
+    "strict": true,
+  },
   "networks": {
     "testnet": {
       "nodes": [ {"ip": "127.0.0.1", "protocol": "http", "port": 36667}]
