--- a/config.default.json
+++ b/config.default.json
@@ -4,7 +4,7 @@
     "port": 5080,
     "host": "127.0.0.1",
     "path:": "/",
-    "strict": true,
+    "strict": true
   },
   "networks": {
     "testnet": {
