--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
     "bitcore-mnemonic": "^1.5.0",
     "bytebuffer": "^5.0.1",
     "chloride": "^2.2.8",
+    "jayson": "^2.1.0",
     "lodash": "^4.17.5",
-    "node-json-rpc": "0.0.1",
     "popsicle": "^9.2.0",
     "vorpal": "zyuhel/vorpal#1f2740a"
   },
@@ -28,7 +28,7 @@
   },
   "publishConfig": {
     "access": "public"
-  },  
+  },
   "author": "Dmitriy Soloduhin <devs@adamant.in> (https://adamant.im)",
   "license": "GPL-3.0",
   "bugs": {
