--- a/package.json
+++ b/package.json
@@ -19,9 +19,13 @@
   "bin": {
     "adm": "./index.js"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "mocha": "^5.2.0",
+    "shelljs": "^0.8.3",
+    "should": "^13.2.3"
+  },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "./node_modules/mocha/bin/mocha test"
   },
   "repository": {
     "type": "git",
