Add testnet nodes

--- a/config.default.json
+++ b/config.default.json
@@ -5,7 +5,28 @@
   },
   "networks": {
     "testnet": {
-      "nodes": [ {"ip": "127.0.0.1", "protocol": "http", "port": 36667}]
+      "nodes": [
+        {
+          "ip": "127.0.0.1",
+          "protocol": "http",
+          "port": 36667
+        },
+        {
+          "ip": "http://testnode1.adamant.im",
+          "protocol": "https",
+          "port": ""
+        },
+        {
+          "ip": "65.21.156.2",
+          "protocol": "http",
+          "port": 36667
+        },
+        {
+          "ip": "95.217.19.144",
+          "protocol": "http",
+          "port": 36667
+        }        
+      ]
     },
     "mainnet": {
       "nodes": [
