--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "ed2curve": "^0.3.0",
     "jayson": "^3.6.6",
     "joi": "^17.6.0",
+    "jsonminify": "^0.4.2",
     "leven": "^3.1.0",
     "semver": "^7.3.7",
     "shell-quote": "^1.7.3",
