--- a/config.default.json
+++ b/config.default.json
@@ -13,7 +13,7 @@
     "port": 5080
   },
 
-  /** Additionall, you can specify what ADM nodes to use **/
+  /** Additionally, you can specify what ADM nodes to use **/
   "networks": {
     "testnet": {
       "nodes": [
