--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "adamant-console",
-  "version": "2.0.0",
+  "version": "2.1.0",
   "description": "Console API and JSON-RPC for interacting with ADAMANT Blockchain",
   "main": "lib/api/index.js",
   "bin": {
@@ -9,6 +9,8 @@
   "engines": {
     "node": ">=14"
   },
+  "author": "ADAMANT Foundation <devs@adamant.im> (https://adamant.im)",
+  "license": "GPL-3.0",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "lint": "npx eslint -f visualstudio .",
@@ -18,11 +20,6 @@
     "type": "git",
     "url": "git+https://github.com/Adamant-im/adamant-console.git"
   },
-  "keywords": [
-    "ADAMANT"
-  ],
-  "author": "",
-  "license": "GPL-3.0",
   "bugs": {
     "url": "https://github.com/Adamant-im/adamant-console/issues"
   },
@@ -47,5 +44,18 @@
     "shell-quote": "^1.7.3",
     "sodium-browserify-tweetnacl": "^0.2.6",
     "tweetnacl": "^1.0.3"
-  }
+  },
+  "keywords": [
+    "adm",
+    "adamant",
+    "blockchain",
+    "messenger",
+    "wallet",
+    "secure",
+    "encryption",
+    "crypto",
+    "cryptocurrency",
+    "CLI",
+    "console"
+  ]
 }
