--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "ADAMANT Foundation <devs@adamant.im> (https://adamant.im)",
   "license": "GPL-3.0",
   "scripts": {
+    "format": "prettier . --write",
     "test": "echo \"Error: no test specified\" && exit 1",
     "lint": "npx eslint -f visualstudio .",
     "lint:fix": "npx eslint -f visualstudio --fix"
@@ -27,7 +28,9 @@
   "devDependencies": {
     "eslint": "^8.16.0",
     "eslint-config-airbnb-base": "^15.0.0",
-    "eslint-plugin-import": "^2.26.0"
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-import": "^2.26.0",
+    "prettier": "3.2.4"
   },
   "dependencies": {
     "@stablelib/utf8": "^1.0.1",
